# indiana

./: .firebaserc  .gitignore  database.rules.json  firebase.json  package-lock.json  package.json
.firebase/: hosting.YnVpbGQ.cache
functions/: envs.toml  main.py  package-lock.json  pyproject.toml  requirements.txt  venv
functions/pf/: __init__.py  gpt.py  ingest.py  query.py  scrape.py
src/: app.html
src/routes/: +page.svelte  answer.svelte  aspirations  contextCard.svelte  firebase.js  pinecone.js  qa.svelte  referenceCard.svelte  source.svelte  sources.svelte  stores.js  trashcan.svelte  ui
src/routes/context_cards/: article_context.svelte  youtube_context.svelte
static/: global.css
