[tool.poetry]
name = "pf"
version = "0.1.0"
description = ""
authors = ["Oscar Laird <olaird25@gmail.com>"]
readme = "README.md"
packages = [
	{ include = "pf",  from = "." }
]

[tool.poetry.dependencies]
python = "^3.11"
firebase-functions = "^0.1.0"
firebase-admin = "^6.1.0"
yt-dlp = "^2023.3.4"
youtube-transcript-api = "^0.6.0"
newspaper3k = "^0.2.8"
openai = "^0.27.7"
numpy = "^1.24.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
